Thêm GET /ban-sach và /ban-sach/{ma}, tách TaoDatTruocDto, khai nullable cho DTO sửa, thông báo lỗi có dấu (B2, B3)
